添加视频独立播放功能，正式更名为“谷歌浏览器中国版”

--- a/src/background.html
+++ b/src/background.html
@@ -4,14 +4,12 @@
 </head>
 <body>
     <script src="js/analytics.js"></script>
-
     <script src="js/util.js"></script>
-
     <script type="text/javascript">
         var message = [
 { "id": 0, "orderid": 0, "name": "用谷歌搜索", "url": "http://www.google.com.hk/search?q={s}", "charset": "utf-8", "pic": "images/google.jpg", "isused": true },
 { "id": 1, "orderid": 1, "name": "用百度搜索", "url": "http://www.baidu.com/s?ie=utf-8&f=8&wd={s}", "charset": "utf-8", "pic": "images/baidu.jpg", "isused": false },
-{ "id": 2, "orderid": 2, "name": "必应搜索", "url": "http://www.bing.com/search?q={s}", "charset": "utf-8", "pic": "images/bing.jpg", "isused": false },
+{ "id": 2, "orderid": 2, "name": "全能搜索", "url": "http://peizhi1.com/s.aspx?def=p1&s={s}&eng=my", "charset": "utf-8", "pic": "images/bing.jpg", "isused": true },
 { "id": 3, "orderid": 3, "name": "谷歌购物", "url": "http://www.google.cn/products?aq=f&q={s}", "charset": "utf-8", "pic": "images/shopping.jpg", "isused": true },
 { "id": 4, "orderid": 4, "name": "百度百科", "url": "http://baike.baidu.com/searchword/?pic=1&sug=1&word={s}", "charset": "gb2312", "pic": "images/wiki.jpg", "isused": true },
 { "id": 5, "orderid": 5, "name": "手气不错", "url": "http://www.google.cn/search?hl=zh-CN&source=hp&q={s}&btnI=%C2%A0%E6%89%8B%E6%B0%94%E4%B8%8D%E9%94%99%C2%A0&aq=f&oq=", "charset": "gb2312", "pic": "images/wiki.jpg", "isused": true },
@@ -21,10 +19,10 @@
         *预定义的搜索引擎
         */
         //var message = "[{\"id\":0,\"orderid\":0,\"name\":\"用谷歌搜索\",\"url\":\"http://www.google.com/search?q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/google.jpg\",\"isused\":true},{\"id\":1,\"orderid\":1,\"name\":\"用百度搜索\",\"url\":\"http://www.baidu.com/s?ie=utf-8&f=8&wd={s}\",\"charset\":\"utf-8\",\"pic\":\"images/baidu.jpg\",\"isused\":false},{\"id\":2,\"orderid\":2,\"name\":\"必应搜索\",\"url\":\"http://www.bing.com/search?q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/bing.jpg\",\"isused\":false},{\"id\":3,\"orderid\":3,\"name\":\"谷歌购物\",\"url\":\"http://www.google.cn/products?aq=f&q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/shopping.jpg\",\"isused\":true},{\"id\":4,\"orderid\":4,\"name\":\"百度百科\",\"url\":\"http://baike.baidu.com/searchword/?pic=1&sug=1&word={s}\",\"charset\":\"gb2312\",\"pic\":\"images/wiki.jpg\",\"isused\":true},{\"id\":5,\"orderid\":5,\"name\":\"手气不错\",\"url\":\"http://www.google.cn/search?hl=zh-CN&source=hp&q={s}&btnI=%C2%A0%E6%89%8B%E6%B0%94%E4%B8%8D%E9%94%99%C2%A0&aq=f&oq=\",\"charset\":\"gb2312\",\"pic\":\"images/wiki.jpg\",\"isused\":true}]";
-message = JSON.stringify(message);
+        message = JSON.stringify(message);
         var engines_ = JSON.parse(message);
         //var engines_ = JSON.parse(getMessage("engines"));
-        
+
         var msg = {};
 
         /*
@@ -36,7 +34,7 @@ message = JSON.stringify(message);
         }
         }
 
-    function sendText(par) {
+        function sendText(par) {
         var param = [];
         param.push("title=" + par.title);
         param.push("url=" + par.url);
@@ -50,11 +48,11 @@ message = JSON.stringify(message);
         }
         */
         //接收content script的消息
-        chrome.extension.onConnect.addListener(function(port) {
+        chrome.extension.onConnect.addListener(function (port) {
             var tab = port.sender.tab;
             // This will get called by the content script we execute in
             // the tab as a result of the user pressing the browser action.
-            port.onMessage.addListener(function(info) {
+            port.onMessage.addListener(function (info) {
                 if (info.text) {
                     msg.text = info.text;
                     sendText(msg);
@@ -71,6 +69,19 @@ message = JSON.stringify(message);
                         height: parseInt(info.height),
                         url: info.newwindow
                     });
+                } else if (info.video) {
+                    var url = info.video;
+                    /*
+                    if (url.indexOf("?") == -1) {
+                    url += "?chromemovie=t&i=" + info.i;
+                    } else {
+                    url += "&chromemovie=t&i=" + info.i;
+                    }
+                    */
+
+                    var sName = "?chromemovie=t&i=" + info.i;
+
+                    window.open(url, sName, "left=" + parseInt(info.left) + ",top=" + parseInt(info.top) + ",width=" + parseInt(info.width) + ", height=" + parseInt(info.height));
                 }
             });
         });
@@ -92,7 +103,7 @@ message = JSON.stringify(message);
         };
 
         //接收content script 的请求
-        chrome.extension.onRequest.addListener(function(request, sender, sendResponse) {
+        chrome.extension.onRequest.addListener(function (request, sender, sendResponse) {
             if (request.option == "getinfo")
                 sendResponse({
                     searchshow: (localStorage["showsearch"] || "newwindow"),
@@ -118,6 +129,5 @@ message = JSON.stringify(message);
             localStorage['firstrun'] = true;
         }
     </script>
-
 </body>
 </html>
