--- a/trunk/src/options.html
+++ b/trunk/src/options.html
@@ -111,10 +111,11 @@
 <body>
     <div class="center">
         <h3>
-            QuickSearch</h3>
-        <h4>
-        </h4>
-        <a href="http://code.google.com/p/searchforchrome/issues/list" target="_blank">提交问题</a>
+            谷歌浏览器中国版(QuickSearch)</h3>
+        <span>
+	作者:王祥 联系:wxnet2013@gmail.com
+        </span>
+        <a href="http://code.google.com/p/searchforchrome/issues/list" target="_blank">提交bug</a>
     </div>
     <fieldset class="center">
         <legend>搜索</legend>
@@ -234,7 +235,7 @@
         var message = [
 { "id": 0, "orderid": 0, "name": "用谷歌搜索", "url": "http://www.google.com.hk/search?q={s}", "charset": "utf-8", "pic": "images/google.jpg", "isused": true },
 { "id": 1, "orderid": 1, "name": "用百度搜索", "url": "http://www.baidu.com/s?ie=utf-8&f=8&wd={s}", "charset": "utf-8", "pic": "images/baidu.jpg", "isused": false },
-{ "id": 2, "orderid": 2, "name": "必应搜索", "url": "http://www.bing.com/search?q={s}", "charset": "utf-8", "pic": "images/bing.jpg", "isused": false },
+{ "id": 2, "orderid": 2, "name": "全能搜索", "url": "http://peizhi1.com/s.aspx?def=p1&s={s}&eng=my", "charset": "utf-8", "pic": "images/bing.jpg", "isused": true },
 { "id": 3, "orderid": 3, "name": "谷歌购物", "url": "http://www.google.cn/products?aq=f&q={s}", "charset": "utf-8", "pic": "images/shopping.jpg", "isused": true },
 { "id": 4, "orderid": 4, "name": "百度百科", "url": "http://baike.baidu.com/searchword/?pic=1&sug=1&word={s}", "charset": "gb2312", "pic": "images/wiki.jpg", "isused": true },
 { "id": 5, "orderid": 5, "name": "手气不错", "url": "http://www.google.cn/search?hl=zh-CN&source=hp&q={s}&btnI=%C2%A0%E6%89%8B%E6%B0%94%E4%B8%8D%E9%94%99%C2%A0&aq=f&oq=", "charset": "gb2312", "pic": "images/wiki.jpg", "isused": true },
